2013-04-12 Max Baak <mbaak@cern.ch>
	M       src/Utils.cxx
	M       setup.sh
	* point setup file to root trunk
	* Fit uses Minuit2

2013-04-08 Max Baak <mbaak@cern.ch>
        M       Utils.cxx
        M       Utils.h
        * Always force evaluation of Hesse
        * Update of plotNLL function.
        * Added function to change interpolation code
        M       src/ConfigMgr.cxx
        * overwrite default fit - change from piece-wise linear to 6th order poly interp + linear extrapolation (also used in Higgs group)

2013-04-03 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* check for proper null-ptr in python/prepareHistos.py

2013-04-02 Jeanette Loranz <jeanette.miriam.lorenz@cern.ch>
        M python/configManager.py
        M python/histogramsManager.py
        * bug fixes in userNormHistosys and userHistoSys

2013-04-02 David Cote <david.cote@cern.ch>
	* Updated to more robust pattern for region and component names matching in ChannelStyle.cxx and Utils.cxx

2013-03-28 Max Baak <mbaak@cern.ch>
	M       scripts/YieldsTable.py
	M       scripts/SysTable.py
	M       src/Utils.cxx
	M       src/Utils.h
	* Introduced option -y for YieldsTable.py and SysTable.py to use symmetrized minos errors in tables.


2013-03-06 Max Baak <mbaak@cern.ch>
	M       setup.sh
	* Now points to root 5.34.05, to solve this bug:
	https://savannah.cern.ch/bugs/?98832
	* and the histfactory bin width bug.

2013-03-05 Max Baak <mbaak@cern.ch>
	M src/toy_utils.cxx
	* Don't reject failed fits, but flag them in list file.
	M setup.sh
	* Points to root version that applies kick to reset failed fit during hypo test

2013-02-13 Max Baak <mbaak@cern.ch>
        * Tag before applying some major updates
        * Tagged HistFitter-00-00-25

2013-02-06 Max Baak <mbaak@cern.ch>
        * Tagged HistFitter-00-00-24

2013-02-06 Max Baak <mbaak@cern.ch>
	M       scripts/PrintFitResult.py
	M       scripts/YieldsTable.py
	M       scripts/UpperLimitTable.py
	M       scripts/YieldsTableTex.py